--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,6 +72,7 @@
         "variant": "cpp",
         "csignal": "cpp",
         "any": "cpp",
-        "geometry": "cpp"
+        "geometry": "cpp",
+        "*.ipp": "cpp"
     }
 }
